managed/apps/tw/components/api/overlays/dev/patches/deploy-api-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-api
  namespace: tw
spec:
  template:
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/tw/api/dev/api:9045054
