managed/apps/tw/components/api/overlays/dev/patches/deploy-api-database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-database
  namespace: tw
spec:
  template:
    spec:
      containers:
        - name: database
          image: gcr.io/tf-ops-cicd-97aadd/tw/api/dev/database:latest
